--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -1,89 +1,18 @@
-div.home-header-gallery {
-  position: relative;
-  overflow: hidden;
-  white-space: nowrap;
-  width: 100vw;
- 
-}
-
-/*THIS WORKS ON MOBILE and 'touchpad'
-- need to find a way to make it work on desktop
-while hiding the scroll bar
-
-- set to flex instead of inline flex and disable the wheel events
-to get the initial touchpad working again - this will break desktop
-*/
-div.home-header-gallery-wrap {
-  height: 60vh;
-  display: flex;
-  // display: inline-flex;
-  -webkit-overflow-scrolling: touch;
-  touch-action: pan-y;
-  overflow-x: auto;
-  align-items: center;
-}
-
-::-webkit-scrollbar {
-  display: none;
-}
-
-img.home-header-gallery-images{
- 
-  flex-shrink: 0;
-  width: 36vw;
-  margin-left: 7vw;
- 
-}
-
-// handles the opacity and slide in transitions 
-
-img.is--active {
- opacity: 1;
- transition: opacity 500ms ease-out
-//  transform: translate3d(0px, 0px, 0px)
-}
-
-img.animate {
-  opacity: 0;
-  // transform: translate3d(0, 0px, 0); transform 400ms ease-out; - to bottom transition
-  transition: opacity 500ms ease-out
-}
-
-// img.animate--horz {
-//   transform: translate3d(40px, 0px, 0px)
-// }
-
-@media (min-width: 320px) and (max-width: 812px) {
   div.home-header-gallery {
     position: relative;
     overflow: hidden;
     white-space: nowrap;
     width: 100vw;
-    cursor: grab;
   }
   
-  /*THIS WORKS ON MOBILE and 'touchpad'
-  - need to find a way to make it work on desktop
-  while hiding the scroll bar
-  
-  - set to flex instead of inline flex and disable the wheel events
-  to get the initial touchpad working again - this will break desktop
-  */
   div.home-header-gallery-wrap {
     height: 60vh;
     display: flex;
-    // display: inline-flex;
     -webkit-overflow-scrolling: touch;
-    
     scroll-snap-type: x mandatory;
     touch-action: pan-y;
     overflow-x: auto;
-    
-    
     align-items: center;
-    // width: auto;
-  
-    // position: relative;
   }
   
   ::-webkit-scrollbar {
@@ -95,6 +24,40 @@ img.animate {
     flex-shrink: 0;
     width: 80vw;
     margin-left: 7vw;
+  }
+
+   // TRANSITIONS / ANIMATIONS --------------
+  
+   img.is--active {
+    opacity: 1;
+    transition: opacity 500ms ease-out;
+    transform-style: preserve-3d;
+    backface-visibility: hidden;
+    -webkit-transition: opacity 500ms ease-out;
+    -webkit-transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+   //  transform: translate3d(0px, 0px, 0px)
+   }
    
+   img.animate {
+      opacity: 0;
+      // transform: translate3d(0, 0px, 0); transform 400ms ease-out; - to bottom transition
+      transition: opacity 500ms ease-out;
+      transform-style: preserve-3d;
+      backface-visibility: hidden;
+      -webkit-transition: opacity 500ms ease-out;
+      -webkit-transform-style: preserve-3d;
+      -webkit-backface-visibility: hidden;
+   }
+   
+   // img.animate--horz {
+   //   transform: translate3d(40px, 0px, 0px)
+   // }
+
+//blanket desktop setting for dev purposes. default is mobile
+@media (min-width: 1024px) {
+  
+  img.home-header-gallery-images{
+    width: 36vw;
   }
 }
