--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -22,14 +22,9 @@ img {
   width: 33vw;
 }
 
-img#logo {
-  width: 50px;
-  height: 50px;
-}
-
 // TRANSITIONS / ANIMATIONS --------------
   
-img.is--active {
+.is--active {
     opacity: 1;
     transition: opacity 500ms ease-out;
     transform-style: preserve-3d;
@@ -40,7 +35,7 @@ img.is--active {
    //  transform: translate3d(0px, 0px, 0px)
    }
    
-img.animate {
+.animate {
       opacity: 0;
       // transform: translate3d(0, 0px, 0); transform 400ms ease-out; - to bottom transition
       transition: opacity 500ms ease-out;
