adjusted sass architecture

--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -1,6 +1,5 @@
 /*-------------------home page styles go here---------------*/
 
 .homepage__body {
-  height: 100vh;
-  width: 100vw;
+  @include entire-viewport
 }
