--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -23,29 +23,12 @@ img {
 }
 
 // TRANSITIONS / ANIMATIONS --------------
-  
+
 .is--active {
-    opacity: 1;
-    transition: opacity 500ms ease-out;
-    transform-style: preserve-3d;
-    backface-visibility: hidden;
-    -webkit-transition: opacity 500ms ease-out;
-    -webkit-transform-style: preserve-3d;
-    -webkit-backface-visibility: hidden;
-   //  transform: translate3d(0px, 0px, 0px)
-   }
-   
+  @include fade(1)
+ }
+ 
 .animate {
-      opacity: 0;
-      // transform: translate3d(0, 0px, 0); transform 400ms ease-out; - to bottom transition
-      transition: opacity 500ms ease-out;
-      transform-style: preserve-3d;
-      backface-visibility: hidden;
-      -webkit-transition: opacity 500ms ease-out;
-      -webkit-transform-style: preserve-3d;
-      -webkit-backface-visibility: hidden;
-   }
-   
-   // img.animate--horz {
-   //   transform: translate3d(40px, 0px, 0px)
-   // }
+  @include fade(0)
+ }
+  
