--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 //BASE---------------------
+@import './base/mixins';
 @import './base/settings';
 @import './base/base';
 //COMPONENTS---------------
