--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -6,11 +6,11 @@ div.nav--sticky-wrap {
   left: 0;
   z-index: 10;
   width: 100%;
-  background-color: $white;
+  background-color: none;
   transform: translate3d(0, 0, 0);
   transition: transform 500ms ease-out;
   &.is--scroll {
-    background-color: rgba(255,255,255,.95);
+    
   }
   &.is--scroll-down {
     transform: translate3d(0, -100%, 0);
