--- a/src/styles/components/slices/_gallery.scss
+++ b/src/styles/components/slices/_gallery.scss
@@ -15,6 +15,7 @@ img.gallery__images{
   scroll-snap-align: center;
   flex-shrink: 0;
   width: 80vw;
+  height: 50vh;
   margin-left: 7vw;
 }
 
@@ -30,5 +31,6 @@ img.gallery__images{
   
   img.gallery__images{
     width: 36vw;
+    height: 33vh;
   }
 }
