--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,5 @@
 //BASE---------------------
+@import '../../node_modules/normalize.css/normalize.css';
 @import './base/mixins';
 @import './base/settings';
 @import './base/base';
