--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,6 +7,7 @@
 @import './components/homepage';
 @import './components/nav';
 @import './components/header';
+@import './components/casestudy-featured';
 @import './components/casestudy';
 
 //SLICES--------------------
