--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -4,6 +4,10 @@
   width: 100vw;
 }
 
+@mixin full-width {
+  width: 100vw;
+}
+
 //slice layout stuff-------------------------
 
 @mixin slider-base {
@@ -14,7 +18,7 @@
 }
 
 @mixin slider-wrap {
-  display: flex;
+  @include flexbox;
   -webkit-overflow-scrolling: touch;
   scroll-snap-type: x mandatory;
   touch-action: pan-y;
@@ -24,15 +28,35 @@
   scrollbar-width: none;
 }
 
+//vendor prefixes-----------------------------
+
+@mixin prefixer($property, $value, $webkit:true, $moz:true, $ms:true) {
+  @if $webkit {-webkit-#{$property}: $value;}
+  @if $moz {-moz-#{$property}: $value;}
+  @if $ms {-moz-#{$property}: $value;}
+}
+
+@mixin flexbox {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+}
+
 //transitions / animations--------------------
 @mixin fade($opacity: 1) {
+  //testing out prefix mixin
+  @include prefixer(transition, opacity 500ms ease-out, true ,false ,false );
+  @include prefixer(transform-style, preserve-3d, true, false, false);
+  @include prefixer(backface-visibility, hidden, true, false, false);
+  // -webkit-transition: opacity 500ms ease-out;
+  // -webkit-transform-style: preserve-3d;
+  // -webkit-backface-visibility: hidden;
   opacity: $opacity;
   transition: opacity 500ms ease-out;
   transform-style: preserve-3d;
   backface-visibility: hidden;
-  -webkit-transition: opacity 500ms ease-out;
-  -webkit-transform-style: preserve-3d;
-  -webkit-backface-visibility: hidden;
 }
 
 //mediaqueries-------------------------------
