--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -1,18 +1,28 @@
 /*-----------Nav Styles Here-----------*/
 
 div.nav--sticky-wrap {
+  background-color: rbga(255,255,255,0);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 10;
   width: 100%;
-  background-color: none;
+  background-color: white;
+  @supports(mix-blend-mode: exclusion) {
+    mix-blend-mode: exclusion;
+    background-color: transparent;
+  }
+  
+  @include prefixer(transform,translate3d(0, 0, 0), true, false, true);
+  @include prefixer(transition, transform 400ms ease-out, true, false, false);
   transform: translate3d(0, 0, 0);
   transition: transform 400ms ease-out;
   &.is--scroll {
     
   }
   &.is--scroll-down {
+    @include prefixer(transform,translate3d(0, -100%, 0), true, false, true);
+    @include prefixer(transition, transform 250ms ease-out, true, false, false);
     transform: translate3d(0, -100%, 0);
     transition: transform 250ms ease-out;
   }
@@ -20,9 +30,11 @@ div.nav--sticky-wrap {
 
 nav.nav {
   position: relative;
-  display: flex;
+  @include flexbox;
   align-items: center;
   justify-content: space-between;
+ 
+  
 }
 
 .nav__logo {
@@ -33,8 +45,26 @@ nav.nav {
   }
 }
 
+
+
+.logo-path {
+  fill: $black;
+  @supports(mix-blend-mode: exclusion) {
+      fill: $white;
+  }
+}
+
+
 div.nav__nav-items {
-  display: flex;
+  a{
+    text-decoration: none;
+    color: $black;
+    @supports(mix-blend-mode: exclusion) {
+      color: $white;
+  }
+   
+  }
+  @include flexbox;
   padding: $s-size;
   * {
     margin-left: $s-size;
