--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -7,11 +7,10 @@ div.nav--sticky-wrap {
   left: 0;
   z-index: 10;
   width: 100%;
-  background-color: white;
-  @supports(mix-blend-mode: exclusion) {
+  &.--dynamic-color {
     mix-blend-mode: exclusion;
-    background-color: transparent;
   }
+ 
   
   @include prefixer(transform,translate3d(0, 0, 0), true, false, true);
   @include prefixer(transition, transform 400ms ease-out, true, false, false);
@@ -33,8 +32,6 @@ nav.nav {
   @include flexbox;
   align-items: center;
   justify-content: space-between;
- 
-  
 }
 
 .nav__logo {
@@ -45,29 +42,39 @@ nav.nav {
   }
 }
 
-
-
 .logo-path {
   fill: $black;
-  @supports(mix-blend-mode: exclusion) {
-      fill: $white;
+  &.--home {
+    fill: $black;
+  }
+  &.--dark-mode {
+    fill: $white;
+  }
+  &.--light-mode {
+    fill: $black;
   }
 }
 
 
 div.nav__nav-items {
+  color: $black;
   a{
     text-decoration: none;
-    color: $black;
-    @supports(mix-blend-mode: exclusion) {
-      color: $white;
-  }
-   
+    color: inherit;
   }
   @include flexbox;
   padding: $s-size;
   * {
     margin-left: $s-size;
+  }
+  &.--home {
+    color: $black;
+  }
+  &.--dark-mode {
+    color: $white;
+  }
+  &.--light-mode {
+    color: $black;
   }
   &.animate {
     @include fade(0);
