--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -2,9 +2,9 @@
 
 .homepage__body {
   @include entire-viewport;
-  @supports(mix-blend-mode: difference) {
-    background-color: white;
-  } 
+  // @supports(mix-blend-mode: difference) {
+  //   background-color: white;
+  // } 
 }
 
 div.homepage__casestudies-featured {
