cleaned up, adjusted scroll event listeners, added dyanmic light/dark for nav

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,7 @@
 .header {
   @include entire-viewport;
   position: relative;
+  background-color: blue;
   // position:sticky;
   // position: -webkit-sticky;
   // top: 0;
