cleaned up gallery and r/l image slice. played with loader

--- a/src/styles/components/slices/_gallery.scss
+++ b/src/styles/components/slices/_gallery.scss
@@ -12,6 +12,7 @@ div.gallery--wrap {
 }
 
 img.gallery__images{
+  background-color: pink;
   scroll-snap-align: center;
   flex-shrink: 0;
   width: 80vw;
