--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,6 +4,7 @@
 @import './base/settings';
 @import './base/base';
 //COMPONENTS---------------
+@import './components/loader';
 @import './components/homepage';
 @import './components/nav';
 @import './components/header';
