--- a/src/styles/base/_mixins.scss
+++ b/src/styles/base/_mixins.scss
@@ -61,7 +61,11 @@
 
 //mediaqueries-------------------------------
 
-
+@mixin media($width) {
+  @media only screen and (min-width: #{$width}) {
+    @content
+  }
+}
 
 
 
