--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,7 @@
 @import './components/homepage';
 @import './components/nav';
 @import './components/header';
+@import './components/about';
 @import './components/exhibitions';
 @import './components/casestudy-featured';
 @import './components/casestudy';
@@ -16,4 +17,5 @@
 @import './components/slices/gallery';
 @import './components/slices/slider_slice';
 @import './components/slices/panoramic_slider_slice';
+@import './components/slices/image_dyptich';
 
