--- a/src/styles/components/_casestudy-featured.scss
+++ b/src/styles/components/_casestudy-featured.scss
@@ -2,5 +2,5 @@ div.casestudy-featured {
   height: 1000px;
   // background-color:$black;
   color: $white;
-  padding-top: $l-size;
+  padding-top: 3.2rem;
 }
