--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -10,7 +10,7 @@
 div.homepage__casestudies-featured {
   background-color: $black;
   color: $white;
-  padding-top: $l-size;
+  padding-top: 3.2rem;
   position: relative;
   z-index: 3;
 }
