--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -18,4 +18,5 @@
 @import './components/slices/slider_slice';
 @import './components/slices/panoramic_slider_slice';
 @import './components/slices/image_dyptich';
+@import './components/slices/video-module';
 
