--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -10,18 +10,12 @@ $desktop-lrg: 1440px;
 
 $black: #000;
 $white: #fff;
+$light-grey: #B4B4B4;
 
-//SPACING
+//SPACING 
 $xxs-padding: 4vw;
 $xs-padding: 8vw;
 $s-padding: 12.8vw;
 $m-padding: 16vw;
 $l-padding: 21.34vw;
 $xl-padding: 34.13vw;
-
-//TYPEOGRAPHY- root of 10 (think in px/10)
-$s-size: 1.2rem;
-$m-size: 1.6rem;
-$l-size: 3.2rem;
-$xl-size: 4.8rem;
-
