--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,6 +15,10 @@
 
 //SLICES--------------------
 @import './components/slices/gallery';
+@import './components/slices/header_slice';
+@import './components/slices/body_text_slice';
+@import './components/slices/pull_quote_slice';
+@import './components/slices/media_general_slices';
 @import './components/slices/slider_slice';
 @import './components/slices/panoramic_slider_slice';
 @import './components/slices/image_dyptich';
