fix to scroll between links bug in about, casestudy, work pages

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -43,6 +43,10 @@ button:disabled {
   cursor: default;
 }
 
+img {
+  width: 33vw;
+}
+
 // TRANSITIONS / ANIMATIONS --------------
 
 .is--active {
