--- a/src/styles/components/slices/_panoramic_slider_slice.scss
+++ b/src/styles/components/slices/_panoramic_slider_slice.scss
@@ -7,6 +7,7 @@ div.slice-pano {
   @include slider-base;
   div.slice-pano--wrap {
     @include slider-wrap;
+    width:400vw;
   }
   div.slice-pano--padding {
     padding-left: 8vw;
@@ -24,7 +25,9 @@ div.slice-pano {
 @include media-min($desktop) {
   div.slice-pano {
     padding-bottom: 16.667vw;
-    
+    div.slice-pano--wrap {
+      width:175vw;
+    }
     div.slice-pano--padding {
       padding-left: 45.14vw;
     }
