--- a/src/styles/components/slices/_body_text_slice.scss
+++ b/src/styles/components/slices/_body_text_slice.scss
@@ -1,13 +1,12 @@
 .body-copy{
   @include body-copy(inherit);
-  padding: 34.133vw 8vw;
+  padding: 34.133vw 8vw 0 8vw;
 }
 
 @include media-min($desktop) {
 
   .body-copy{
-    
-    padding: 16.667vw 15.97vw;
+    padding: 16.667vw 15.97vw 0 15.97vw;
     max-width: 600px;
   }
   .body-copy--flex {
