--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,7 +14,7 @@ html {
 }
 
 body {
- 
+  scroll-behavior: smooth;
   font-family: Helvetica, Arial, sans-serif;
   //base font-size is 16px
   font-size: 16px;
