added slice styles - video module, media narrow, pull quote left/wide, & media full-width

--- a/src/styles/components/slices/_body_text_slice.scss
+++ b/src/styles/components/slices/_body_text_slice.scss
@@ -1,12 +1,13 @@
 .body-copy{
   @include body-copy(inherit);
   padding: 34.133vw 8vw 0 8vw;
+  white-space:pre-line;
 }
 
 @include media-min($desktop) {
 
   .body-copy{
-    padding: 16.667vw 15.97vw 0 15.97vw;
+    padding: 16.667vw 16vw 0 16vw;
     max-width: 600px;
   }
   .body-copy--flex {
@@ -14,6 +15,14 @@
     width: 100%;
     &.--right {
      flex-direction: row-reverse;
+    }
+    &.--two-column {
+      .body-copy {
+        width: 84vw;
+        column-count: 2;
+        column-gap: 48px;
+        max-width: 84vw;
+      }
     }
   }
 }
