--- a/src/styles/components/slices/_image_dyptich.scss
+++ b/src/styles/components/slices/_image_dyptich.scss
@@ -1,14 +1,14 @@
 .dyptich {
-  padding: 0 8vw;
+  padding: 34.133vw 8vw 0 8vw;
 }
 
 .dyptich__image {
   width: 84vw;
   &.left {
-    padding-bottom: 8vw;
+    padding-bottom: 96px;
   }
   &.right {
-    padding-bottom: 21.47vw;
+    // padding-bottom: 21.47vw;
   }
   img {
     width: 100%;
@@ -22,8 +22,8 @@
     flex-direction: row;
     flex-wrap: none;
     height: 35vw;
-    margin-bottom: 16vw;
-    padding: 0 10vw;
+    // margin-bottom: 16vw;
+    padding: 16.667vw 10vw 0 10vw;
   }
   .dyptich__image {
     width: 35vw;
@@ -32,7 +32,7 @@
       padding: 0 10vw 0 0;
     }
     &.right {
-      padding: 0 0 0 0;
+      // padding: 0;
     }
   }
 }
