--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column-reverse;
   align-items: flex-start;
-  padding: 10.67vw 0 21.47vw 0;
+  padding-top: 10.67vw;
   p {
     margin-bottom: 12.8vw;
     @include body-copy($black);
@@ -55,7 +55,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    padding: 5vw 6vw 12.8vw 6vw;
+    padding: 5vw 6vw 0 6vw;
     p {
       margin-bottom: 0;
       max-width: 980px;
