autoplay vid hero styles & refactored to set innerhtml so muted gets passed

--- a/src/styles/components/slices/_header_slice.scss
+++ b/src/styles/components/slices/_header_slice.scss
@@ -1,6 +1,7 @@
 .casestudy__header {
   display: flex;
   align-items: flex-end;
+  overflow: hidden;
   h1{
     @include h1(inherit);
     &.black {
