--- a/src/styles/components/slices/_media_general_slices.scss
+++ b/src/styles/components/slices/_media_general_slices.scss
@@ -29,7 +29,6 @@
   &.video-player--wrap {
     height: 53vw;
   }
-  
 }
 .media--narrow {
   padding-left: 20vw;
@@ -37,6 +36,12 @@
   width: 60vw;
 }
 
+//click-vid-module
+div.video-player > div {
+  background: transparent !important;
+}
+
+//mediaqueries---------------------------------
 @include media-min($desktop) {
   .media {
     padding-top: 16.67vw;
