restructured data to call in root and pass down to kids

--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -1,5 +1,5 @@
 .homepage__body {
-  @include entire-viewport;
+  // @include entire-viewport;
 }
 div.homepage__casestudies-featured {
   background-color: $black;
