--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -1,22 +1,23 @@
-// .rootapp:empty {
-//   background-color: blue;
-//   @include entire-viewport;
-// }
-
 .isLoading{
-  position: relative;
+  position: absolute;
   z-index: 1000;
-  background-color: blue;
+  background-color: $black;
   @include entire-viewport;
-}
-
-.isLoadingFirst {
-  position: relative;
-  display: block;
   overflow: hidden;
-  z-index: 1000;
-  background-color: orange;
-  @include entire-viewport;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  svg {
+    width: 180px;
+    animation: fade .5s ease-in-out;
+  }
+  @keyframes fade {
+    0% {opacity: 0}
+    100% {opacity: 1}
+  }
+  @keyframes loading {
+    //put loading animation here
+  }
 }
 
 .loaded {
