added simply fade-ins on base components

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,4 +1,8 @@
 //375px base--------------------------------------
+.about {
+  background-color: $white;
+}
+
 .about__header {
   padding: 0 8vw;
 }
