--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,6 +1,7 @@
 .header {
   @include entire-viewport;
   position: relative;
+  background-color: $white;
 }
 .header__main-copy {
    padding-top: 120px;
