--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -1,3 +1,14 @@
+// .homepage__body {
+//   &.--isLoading {
+//     @include entire-viewport;
+//     overflow: hidden;
+//     opacity: 0;
+//   }
+//   &.--isLoaded {
+//     opacity: 1;
+//     transition: opacity .5s ease;
+//   }
+// }
 .homepage__body {
   &.--isLoading {
     @include entire-viewport;
