--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -14,6 +14,7 @@ html {
 }
 
 body {
+  background-color: $black;
   scroll-behavior: smooth;
   font-family: Helvetica, Arial, sans-serif;
   //base font-size is 16px
@@ -62,4 +63,16 @@ br {
 .animate {
   @include fade(0)
  }
+
+.--isLoaded {
+  animation: fade .5s ease;
+}
+@keyframes fade {
+  0%{
+    opacity: 0
+  }
+  100% {
+    opacity: 1
+  }
+}
   
