added down-arrow animation

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,6 +8,7 @@
 @import './components/homepage';
 @import './components/nav';
 @import './components/header';
+@import './down_arrow';
 @import './components/about';
 @import './components/exhibitions';
 @import './components/casestudy-featured';
