about page padding fix on vid

--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -37,7 +37,7 @@
   }
   p:last-child {
     padding-left: 8vw;
-    margin-bottom: 12.8vw;
+    padding-bottom: 12.8vw;
   }
 }
 //MQ's- sm>>lrg--------------------------------
@@ -71,7 +71,7 @@
     }
     p:last-child {
       padding-left: 10vw;
-      margin-bottom: 8vw;
+      padding-bottom: 8vw;
     }
   }
 }
