--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -75,4 +75,50 @@ br {
     opacity: 1
   }
 }
+
+// //playing w/ react transition group - 
+// .fade-enter {
+//   opacity: 0;
+//   color: black;
+// }
+
+// .fade-enter.fade-enter-active {
+//   opacity: 1;
+//   background-color: blue;
+//   transition: opacity 3000ms ease;
+// }
+
+// .fade-enter-done {
+//   background-color: pink;
+// }
+
+// .fade-appear {
+//   opacity: 0;
+//   color: black;
+// }
+
+// .fade-appear.fade-appear-active {
+//   opacity: 1;
+//  background-color: green;
+//   transition: opacity 3000ms ease;
+// }
+// .fade-leave {
+//   opacity: 1;
+// }
+
+// .fade-leave.fade-leave-active {
+//   background-color: red;
+//   opacity:0;
+//   transition: opacity 3000ms ease;
+// }
+
+// .fade-exit {
+//   opacity: 1;
+// }
+
+// .fade-exit.fade-exit-active {
+//   opacity: 0;
+//   background-color: red;
+//   transition: opacity 3000ms ease;
+// }
   
