--- a/src/styles/components/slices/_image_dyptich.scss
+++ b/src/styles/components/slices/_image_dyptich.scss
@@ -1,5 +1,5 @@
 .dyptich {
-  padding: 34.133vw 8vw;
+  padding: 34.133vw 8vw 0 8vw;
 }
 
 .dyptich__image {
@@ -23,7 +23,7 @@
     flex-wrap: none;
     height: 35vw;
     // margin-bottom: 16vw;
-    padding: 16.667vw 10vw ;
+    padding: 16.667vw 10vw 0 10vw;
   }
   .dyptich__image {
     width: 35vw;
