--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,7 @@
 @import './base/mixins';
 @import './base/settings';
 @import './base/base';
+@import './base/animations';
 //COMPONENTS---------------
 @import './components/loader';
 @import './components/homepage';
