--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,13 +7,6 @@ html {
   font-size: 62.5%;
   //for firefox scroll
   scrollbar-width: none;
-  // @include media-min($desktop) {
-  //   position: fixed;
-  //   height: 100%;
-  //   overflow: hidden;
-  // }
-  //^^^ fixes the overflow scroll bounce on desktop
-  //but kills the cool nav up and down..... fuck with later
 }
 
 body {
@@ -26,17 +19,15 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-y: auto;
   overflow-x: hidden;
-  // @include media-min($desktop) {
-  //   width: 100vw;
-  //   height: 100vh;
-  //   overflow-y: auto;
-  //   overflow-x: hidden;
-  // }
 }
 
 h1, h2, p, img, div, button, a {
   margin: 0;
   padding: 0;
+}
+
+h1,h2 {
+  font-weight: normal;
 }
 
 ::selection {
