--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,9 +1,10 @@
 //BREAKPOINTS
 $iphoneSE: 320px;
 $mobile: 375px;
-$ipad: 768px;
+$ipad: 720px;
 $ipad-pro: 1024px;
 $desktop: 1280px;
+$ipad-landscape: 1366px;
 $desktop-lrg: 1440px;
 
 //COLORS
