--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,10 +2,12 @@
   @include entire-viewport;
   position: relative;
   background-color: $white;
+  @include label(inherit);
   h1 {
-    font-size: 8vw;
-    line-height: 1.375;
-    letter-spacing: -.5px;
+    @include h1-home;
+    // font-size: 8vw;
+    // line-height: 1.375;
+    // letter-spacing: -.5px;
   }
 }
 
@@ -29,16 +31,12 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 24px 24px 0 24px;
-  span {
+  .exhibitions--wrap {
     display: flex;
     #exhibitions {
       margin-right: 16px;
     }
   }
-}
-
-.header__main-copy {
-  // padding: 24px 24px 0 24px;
 }
 
 @include media-min($mobile) {
@@ -50,8 +48,87 @@
   }
 }
 
+@include media-min($ipad) {
+  .header__info {
+    padding: 48px 48px 0 48px;
+    height: calc(30% - 96px)
+  }
+}
+
+@include media-min($ipad-pro) {
+  .header {
+    color: green;
+  }
+}
+
 @include media-min($desktop) {
+  .header{
+    color: blue;
+    display: flex;
+   
+  }
+  .header__img {
+    height: 100%;
+    width: 40%;
+  }
+  .header__info {
+    justify-content: flex-end;
+    align-items: center;
+    margin: auto;
+    padding: 0 0 48px 0;
+    height: calc(100% - 48px);
+    width: calc(60% );
+    .header-copy--wrap {
+      display: flex;
+      height: 93%;
+      justify-content: center;
+      align-items: center;
+      .header__main-copy {
+        width: 80%;
+        
+      }      
+    }
+    .exhibitions--wrap {
+      align-items: flex-start;
+      width: 80%;
+    }
+  }
+}
+
+@include media-min($ipad-landscape) {
   .header__main-copy {
-    padding-top: 120px;
- }
+    width: 72%; 
+    color: purple;
+  }
+}
+
+@include media-orientation($ipad-pro, 1279px, landscape) {
+  .header{
+    color: red;
+    display: flex;
+  }
+  .header__img {
+    height: 100%;
+    width: 40%;
+  }
+  .header__info {
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 0 48px 0;
+    height: calc(100% - 48px);
+    width: calc(60% );
+    .header-copy--wrap {
+      display: flex;
+      height: 90%;
+      justify-content: center;
+      align-items: center;
+      .header__main-copy {
+        width: 80%; 
+      }
+    }
+    .exhibitions--wrap {
+      align-items: flex-start;
+      width: 80%;
+    }
+  }
 }
